plugins {
	id 'java'
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'com.github.ben-manes.versions' version '0.39.0'
	id "org.ec4j.editorconfig" version "0.0.3"
}

group = 'com.glinboy'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 17
targetCompatibility = 17

repositories {
	mavenCentral()
}

ext {
	jsr310Version = '2.12.3'
	springdocVersion = '1.5.10'
	problemVersion = '0.27.0'
	mapstructVersion = '1.4.2.Final'
}

defaultTasks "bootRun"

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation('org.springframework.boot:spring-boot-starter-web') {
		exclude module: 'spring-boot-starter-tomcat'
	}
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation "org.springframework.boot:spring-boot-starter-undertow"
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jsr310Version}"
	implementation "org.springdoc:springdoc-openapi-ui:${springdocVersion}"
	implementation "org.springdoc:springdoc-openapi-security:${springdocVersion}"
	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"
	
	implementation "org.zalando:problem-spring-web-starter:${problemVersion}"
	
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}

bootRun {
	jvmArgs = ['-XX:+UseZGC',
				'-Xlog:gc*:file=log/linkshorter.gc.log',
				'-XX:+HeapDumpOnOutOfMemoryError',
				'-XX:HeapDumpPath=log/crashes/linkshorter.hprof',
				'-Xss256k',
				'-Dsun.net.client.defaultConnectTimeout=2000',
				'-Dsun.net.client.defaultReadTimeout=2000'
			]
}

test {
	useJUnitPlatform()
}
